--- a/PflStoreProject/PflStoreProject.csproj
+++ b/PflStoreProject/PflStoreProject.csproj
@@ -12,8 +12,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\ProductDetailsViewModel.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.3" />
   </ItemGroup>
 
   <ItemGroup>
