cleanup formatting; add template input fields, map template fileds to order item

--- a/PflStoreProject/PflStoreProject.csproj
+++ b/PflStoreProject/PflStoreProject.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <Compile Remove="Models\ProductDetailsViewModel.cs" />
+    <Compile Remove="Models\ViewModels\BillingVariable.cs" />
   </ItemGroup>
 
   <ItemGroup>
